rendered/photo-studio/templates/ns.yaml
---
# Source: photo-studio/templates/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: final
