rendered/photo-studio/templates/mongodbdeployment.yaml
---
# Source: photo-studio/templates/mongodbdeployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
  type: ClusterIP
---
# Source: photo-studio/templates/mongodbdeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photostudio-app-mongodb
  namespace: final
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: "mongo:7-jammy"
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongodb-storage
          mountPath: /data/db
      volumes:
      - name: mongodb-storage
        persistentVolumeClaim:
          claimName: photostudio-app-mongodb-pvc
