rendered/photo-studio/templates/svc.yaml
---
# Source: photo-studio/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: photostudio-app-ps-service
  namespace: final
spec:
  selector:
    app: ps
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      # nodePort: 
  type: LoadBalancer
